BUG: added dashboard to light-package BUG: added temporary workaround for bootstrap-dropdown issue on mobile devices (https://github.com/twitter/bootstrap/issues/4550) BUG: fixed apply-button in installer

--- a/module_installer/less/kajona-overrides.less
+++ b/module_installer/less/kajona-overrides.less
@@ -146,6 +146,7 @@ body {
                 float:right;
                 background: center center no-repeat;
                 background-color:@green;
+				background-image:url(../pics/icon-save.png);
             }
         }
     }
